--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "react-wrapper/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "src": "package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
@@ -14,7 +11,9 @@
     { "src": "/js/(.*)", "dest": "/js/$1" },
     { "src": "/css/(.*)", "dest": "/css/$1" },
     { "src": "/assets/(.*)", "dest": "/assets/$1" },
-    { "src": "/favicon.ico", "dest": "/favicon.ico" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/landingpage.html", "dest": "/landingpage.html" },
+    { "src": "/index.html", "dest": "/index.html" },
+    { "src": "/", "dest": "/landingpage.html" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
